feat(IA) : utilisation de l'API de GCP
